--- a/package.json
+++ b/package.json
@@ -12,30 +12,32 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@types/prismjs": "1.26.0",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.26.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"sass": "^1.63.4",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"svelte-preprocess": "^5.0.4",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.10.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.2",
+		"@types/markdown-it": "^14.1.2",
+		"@types/prismjs": "1.26.5",
+		"@typescript-eslint/eslint-plugin": "^8.18.0",
+		"@typescript-eslint/parser": "^8.18.0",
+		"eslint": "^9.16.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.46.1",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.2",
+		"sass": "^1.82.0",
+		"svelte": "^5.11.2",
+		"svelte-check": "^4.1.1",
+		"svelte-preprocess": "^6.0.3",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"vite": "^6.0.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"expiry-map": "^2.0.0",
+		"markdown-it": "^14.1.0",
+		"pathcat": "^1.4.0",
 		"prism-themes": "^1.9.0",
-		"prismjs": "1.29.0",
-		"svelte-exmarkdown": "^2.0.0",
-		"urlcat": "^3.1.0"
+		"prismjs": "1.29.0"
 	}
 }
