--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"base64-js": "^1.5.1",
 		"expiry-map": "^2.0.0",
 		"markdown-it": "^14.1.0",
+		"octagonal-wheels": "^0.1.19",
 		"pathcat": "^1.4.0",
 		"prism-themes": "^1.9.0",
 		"prismjs": "1.29.0"
